// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing shouldDeleteRole function isNot false should fail due to inexistent role 1`] = `
Object {
  "message": "    
    expected: role with id 123
    received: null
",
  "pass": false,
  "testName": "shouldDeleteRole",
}
`;

exports[`testing shouldDeleteRole function isNot false should fail due to roleIdentifier null 1`] = `
Object {
  "message": "    
    expected: data to identifier the role (id or name)
    received: null
",
  "pass": false,
  "testName": "shouldDeleteRole",
}
`;

exports[`testing shouldDeleteRole function isNot false should get timeout when trying to delete the role 1`] = `
Object {
  "message": "    
    timeout: role undefined wasn't deleted in the expected time (100)
",
  "pass": false,
  "testName": "shouldDeleteRole",
}
`;

exports[`testing shouldDeleteRole function isNot false should return a failed report for a no deleted role 1`] = `
Object {
  "message": "    
    expected: role undefined to be deleted
",
  "pass": false,
  "testName": "shouldDeleteRole",
}
`;

exports[`testing shouldDeleteRole function isNot false should return a failed test due to failure in message sending 1`] = `
Object {
  "message": "    
    can not send message to channel x
",
  "pass": false,
  "testName": "shouldDeleteRole",
}
`;

exports[`testing shouldDeleteRole function isNot false should return a passed report for a found role with property role.deleted = true role 1`] = `
Object {
  "pass": true,
  "testName": "shouldDeleteRole",
}
`;

exports[`testing shouldDeleteRole function isnot true should get timeout when trying to delete the role, but should pass 1`] = `
Object {
  "pass": true,
  "testName": "shouldDeleteRole",
}
`;

exports[`testing shouldDeleteRole function isnot true should return a failed report for a deleted role(isNot true) 1`] = `
Object {
  "message": "    
    expected: role undefined to not be deleted
",
  "pass": false,
  "testName": "shouldDeleteRole",
}
`;

exports[`testing shouldDeleteRole function isnot true should return a failed report for a found role with property role.deleted = true role 1`] = `
Object {
  "message": "    
    expected: role undefined to not be deleted
",
  "pass": false,
  "testName": "shouldDeleteRole",
}
`;
